# shootgame

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  build-web.sh  project.bat  project.sh  todo
src/: default_bus_layout.tres  dungeon.c  dungeon.h  dynamic_array.c  dynamic_array.h  entity.c  entity.h  export_presets.cfg  game.c  game.h  genarray.h  icon.svg.import  input.c  input.h  main.c  math.h  pch-src.h  pch.h  pico-8.ttf.import  project.godot  shell.html  sprite.c  sprite.h
src/actor/: actor.gd  actor_manager.gd
src/bullet/: bullet.gd  bullet_ball.png.import  bullet_burst.gd  bullet_burst.png.import  bullet_burst.tscn  bullet_linear.gd  bullet_linear_north.png.import  bullet_linear_nw.png.import  bullet_linear_west.png.import  cluster_wrangler.gd  linear_bullet.tscn  linear_bullet_ball.tscn
src/demobox/: demobox.tscn  simple_body.gd
src/doors/: door_north.png.import  door_north.tscn  doors.gd
src/enemies/: enemy.gd  enemy.tscn  walker.png.import  walker.tscn
src/entbody/: ent_body.gd
src/floor_generator/: floor_generator.gd
src/main/: game.gd  game.tscn  global.gd  maiBCC6.tmp  main.gd  main.tscn
src/menu_death/: menu_death.gd  menu_death.tscn  pico8_label_settings.tres
src/music/: battle.wav.import  die1.wav.import  die2.wav.import  music1.wav.import  win.wav.import
src/player/: health_control.gd  heart.png.import  player.gd  player.tscn  player_north.png.import  player_south.png.import  player_west.png.import
src/repeller/: repel.tscn  repeller.gd
src/room/: room.gd  room.tscn  (+4 more)
vendor_godot/: Godot.x86_64
(+118 files in other folders)
